弄到本地端啦肏

--- a/static_pages/projectQA.html
+++ b/static_pages/projectQA.html
@@ -25,7 +25,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/" style="color:#ffffff"><i class="fa fa-graduation-cap"></i> 畢聯會活動主頁</a>
+          <a class="navbar-brand" href="/" style="color:#ffffff"><i class="fa fa-graduation-cap"></i> 畢聯會主頁</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
         <a class="navbar-brand navbar-right" href="/pass"> <i class="fa fa-user"></i>
@@ -33,7 +33,7 @@
           <a class="navbar-brand navbar-right" href="#" data-toggle="modal" data-target="#myModal"><i class="fa fa-phone-square"></i>
  聯絡我們&nbsp;&nbsp;&nbsp;</a>
  
-          <a class="navbar-brand navbar-right" href="https://www.facebook.com/nthugrad/?fref=ts"><i class="fa fa-facebook-square"></i>
+          <a class="navbar-brand navbar-right" target="_blank" href="https://www.facebook.com/nthugrad/?fref=ts"><i class="fa fa-facebook-square"></i>
  Facebook粉絲專頁&nbsp;&nbsp;&nbsp;</a>
         </div><!--/.navbar-collapse -->
       </div>
@@ -111,13 +111,15 @@
         <div class="modal-content">
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <h4 class="modal-title" id="myModalLabel">關於我們</h4>
+            <h4 class="modal-title" id="myModalLabel">聯絡管理員方式:</h4>
           </div>
-          <div class="modal-body"> <h4>
-            作者1 : 陳柏翰(電資16) <i class="fa fa-envelope"></i> hank101060019@gmail.com</br>
-            作者2 : 廖仲文(電機16) <i class="fa fa-envelope"></i> ljw830517@gmail.com</br>
-            網資股長：許菀庭(電機16) <i class="fa fa-envelope"></i> cindyemail0720@yahoo.com.tw </h4>
-          </div>
+          <div class="modal-body">
+		    <ul>
+              <li>陳柏翰(電資16) <i class="fa fa-envelope"></i> hank101060019@gmail.com</li>
+              <li>廖仲文(電機16) <i class="fa fa-envelope"></i> ljw830517@gmail.com</li>
+              <li>許菀庭(電機16) <i class="fa fa-envelope"></i> cindyemail0720@yahoo.com.tw</li>
+            </ul>
+		  </div>
         </div>
       </div>
     </div>
