--- a/static_pages/pass.html
+++ b/static_pages/pass.html
@@ -10,28 +10,27 @@
 <body>
     
   <nav class="navbar navbar-inverse navbar-fixed-top" style="background-color:#660066">
-    <div class="container">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="/projectQA" style="color:#ffffff"><i class="fa fa-graduation-cap"></i> 畢聯會有獎徵答</a>
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="/projectQA" style="color:#ffffff"><i class="fa fa-graduation-cap"></i> 活動主頁</a>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+        <a class="navbar-brand navbar-right" href="/pass"> <i class="fa fa-user"></i>
+ 查詢目前登錄名單</a>
+          <a class="navbar-brand navbar-right" href="#" data-toggle="modal" data-target="#myModal"><i class="fa fa-phone-square"></i>
+ 聯絡我們&nbsp;&nbsp;&nbsp;</a>
+ 
+          <a class="navbar-brand navbar-right" target="_blank"  href="https://www.facebook.com/nthugrad/?fref=ts"><i class="fa fa-facebook-square"></i>
+ Facebook粉絲專頁&nbsp;&nbsp;&nbsp;</a>
+        </div><!--/.navbar-collapse -->
       </div>
-      <div id="navbar" class="navbar-collapse collapse">
-          <a class="navbar-brand navbar-right" href="#" data-toggle="modal" data-target="#myModal">
-            <i class="fa fa-phone-square"></i>
-            聯絡我們&nbsp;&nbsp;&nbsp;
-          </a>
-          <a class="navbar-brand navbar-right" href="https://www.facebook.com/nthugrad/?fref=ts">
-            <i class="fa fa-facebook-square"></i>
-            Facebook粉絲專頁&nbsp;&nbsp;&nbsp;
-          </a>
-      </div><!--/.navbar-collapse -->
-    </div>
-  </nav>
+    </nav>
 
   <div class="main-block">
     <div class="query-wrapper">
@@ -51,22 +50,24 @@
     <p style="text-align:center">&copy; 國立清華大學 畢聯會 (NTHU Graduation Student Association)</p>
   </footer>
 
-  <!-- Modal -->
-  <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-          <h4 class="modal-title" id="myModalLabel">關於我們</h4>
-        </div>
-        <div class="modal-body"> <h4>
-          作者1 : 陳柏翰(電資16) <i class="fa fa-envelope"></i> hank101060019@gmail.com</br>
-          作者2 : 廖仲文(電機16) <i class="fa fa-envelope"></i> ljw830517@gmail.com</br>
-          網資股長：許菀庭(電機16) <i class="fa fa-envelope"></i> cindyemail0720@yahoo.com.tw </h4>
+    <!-- Modal -->
+    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title" id="myModalLabel">聯絡管理員方式:</h4>
+          </div>
+          <div class="modal-body">
+		    <ul>
+              <li>陳柏翰(電資16) <i class="fa fa-envelope"></i> hank101060019@gmail.com</li>
+              <li>廖仲文(電機16) <i class="fa fa-envelope"></i> ljw830517@gmail.com</li>
+              <li>許菀庭(電機16) <i class="fa fa-envelope"></i> cindyemail0720@yahoo.com.tw</li>
+            </ul>
+		  </div>
         </div>
       </div>
     </div>
-  </div>
 
     
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
