--- a/static_pages/adminPage.html
+++ b/static_pages/adminPage.html
@@ -41,7 +41,9 @@
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
-          <a class="navbar-brand" href="#">管理員介面 (題庫管理)</a>
+          <a class="navbar-brand" href="#">題庫管理</a>
+          <a class="navbar-brand" href="/index_back">公告管理</a>
+          <a class="navbar-brand" href="/activity_back">活動管理</a>
         </div>
 	<div align="right">
           <a class="btn btn-primary" href="/adminLogout" role="button">Logout</a>
